updated class structures and added barebones scriptloader.

--- a/LaytonMobileEngine/LaytonMobileEngine.csproj
+++ b/LaytonMobileEngine/LaytonMobileEngine.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Engine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
