developed more of the location characters and added charactersprite manager.

--- a/LaytonMobileEngine/LaytonMobileEngine.csproj
+++ b/LaytonMobileEngine/LaytonMobileEngine.csproj
@@ -61,6 +61,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Character.cs" />
+    <Compile Include="CharacterSpriteManager.cs" />
+    <Compile Include="Dialog.cs" />
     <Compile Include="Location.cs" />
     <Compile Include="LocationManager.cs" />
     <Compile Include="Engine.cs" />
