--- a/LaytonMobileEngine/LaytonMobileEngine.csproj
+++ b/LaytonMobileEngine/LaytonMobileEngine.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptLoader.cs" />
+    <Compile Include="UIManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
