--- a/LaytonMobileEngine/LaytonMobileEngine.csproj
+++ b/LaytonMobileEngine/LaytonMobileEngine.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Engine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptFileParser.cs" />
     <Compile Include="ScriptLoader.cs" />
     <Compile Include="UIManager.cs" />
   </ItemGroup>
