--- a/LaytonMobileEngine/LaytonMobileEngine.csproj
+++ b/LaytonMobileEngine/LaytonMobileEngine.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptFileParser.cs" />
     <Compile Include="ScriptLoader.cs" />
+    <Compile Include="TrunkManager.cs" />
     <Compile Include="UIManager.cs" />
   </ItemGroup>
   <ItemGroup>
